<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.message.ui.LoginFragment"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.message.ui.ChatRoomFragment"
        android:label="@string/label_chatroom_fragment"
        tools:layout="@layout/fragment_chatroom">
        <argument
            android:name="uid"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.message.ui.HomeFragment"
        android:label="@string/label_home_fragment"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_chatFragment"
            app:destination="@id/chatFragment" />

    </fragment>
</navigation>